@@ -1,3 +1,9 @@
+2009-02-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* providerMgr.c:
+	[ 2192062 ] providerMgr doesn't check forkProvider() return values
+	(patch from Klaus Kämpf)
+
 2009-01-30  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* cimcClientSfcbLocal.c, providerMgr.c:
@@ -8,7 +14,7 @@
 	
 2009-01-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
-	* httpAdapter.c
+	* httpAdapter.c:
 	[ 2390533 ] Memory leak in httpAdapter.c
 	(patch from John Powell)
 
